@@ -159,6 +159,12 @@ function db_select_db($dbname){
 	return $r;
 }
 
+function db_real_escape_string($string){
+	global $mysqli_resource;
+	$r = mysqli_real_escape_string($mysqli_resource,$string);
+	return $r;
+}
+
 function db_free_result($result){
 	if (is_array($result)){
 		//cached data
